--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 GEMINI_API_KEY=AIzaSyDAJE4aXYwV7W0Zq1JY7wWIEuGF6xAyUy4
-NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
-NEXT_PUBLIC_FIREBASE_APP_ID=YOUR_APP_ID
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCmJISbCvWHippOWFWuw2OU1oA97UX1pXw
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=newscast-now.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=newscast-now
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=newscast-now.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1081876215072
+NEXT_PUBLIC_FIREBASE_APP_ID=1:1081876215072:web:542edbccc47258e16d1345
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
-GOOGLE_GENAI_API_KEY=YOUR_GOOGLE_GENAI_API_KEY
+GOOGLE_GENAI_API_KEY=AIzaSyC1DnejTKwaxkOP9ICjCe8LGvNz-VrhwfI
