--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "jsdom": "^26.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "p-limit": "^6.2.0",
     "patch-package": "^8.0.0",
+    "puppeteer": "^24.8.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
