--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ GEMINI_API_KEY=AIzaSyDAJE4aXYwV7W0Zq1JY7wWIEuGF6xAyUy4
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCmJISbCvWHippOWFWuw2OU1oA97UX1pXw
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=newscast-now.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=newscast-now
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=newscast-now.appspot.com
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=newscast-now.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1081876215072
 NEXT_PUBLIC_FIREBASE_APP_ID=1:1081876215072:web:542edbccc47258e16d1345
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
