--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GEMINI_API_KEY=AIzaSyDAJE4aXYwV7W0Zq1JY7wWIEuGF6xAyUy4
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCmJISbCvWHippOWFWuw2OU1oA97UX1pXw
+GEMINI_API_KEY=key
+NEXT_PUBLIC_FIREBASE_API_KEY=Key
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=newscast-now.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=newscast-now
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=newscast-now.firebasestorage.app
